<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_db"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/alle_listene" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/innstillinger" />
        <item
            android:id="@+id/nav_logOut"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/logg_ut" />
    </group>
    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share_black_24dp"
                android:title="@string/del" />
        </menu>
    </item>
</menu>