<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settingsActivity"
    android:padding="24dp"
    android:orientation="vertical"
    android:background="?attr/backgroundcolor">
    
<android.support.v7.widget.CardView
    app:cardBackgroundColor="?attr/cardbackground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="?attr/textcolor"
            android:text="@string/velg_m_rkt_tema"/>
        <Switch
            android:id="@+id/myswitch"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/m_rkt_tema"
            android:textColor="?attr/textcolor"/>
    </LinearLayout>
</android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        app:cardBackgroundColor="?attr/cardbackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="?attr/textcolor"
                android:text="@string/slett_all_bruker_data"/>
            <Button
                android:id="@+id/removedata"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/buttoncolor"
                android:text="@string/slett"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>